--- a/new_camera/floc_react_app/src/App.css
+++ b/new_camera/floc_react_app/src/App.css
@@ -157,6 +157,12 @@ body {
   overflow: hidden; /* Hide overflow */
 }
 
+.controlsBox {
+  position: relative;
+  top: 80%;
+  width: 100%;
+}
+
 .cameraDropdownBox {
   position: 'relative';
   bottom: 43;
@@ -181,19 +187,23 @@ body {
 
 /* Style for buttons */
 .button {
-  padding: 10px 20px;
+  padding: 5px 10px;
   margin: 0 10px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 5px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #e9e9e9;
+  color: rgb(0, 0, 0);
+  border: 1px solid black;
+  border-radius: 3px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 15px;
   transition: background-color 0.3s;
-}
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1); /* Add shadow for depth */
+  }
 
 .button:hover {
-  background-color: #45a049;
+  background-color: #dedede;
 }
 
 .clear {
