--- a/new_camera/floc_react_app/src/App.css
+++ b/new_camera/floc_react_app/src/App.css
@@ -185,6 +185,22 @@ body {
   max-width: 100%;
 }
 
+.flash-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  animation: flashEffect 1s linear;
+}
+
+@keyframes flashEffect {
+  0% { background-color: white; }
+  50% { background-color: transparent; }
+  100% { background-color: transparent; }
+}
+
 /* Style for buttons */
 .button {
   padding: 5px 10px;
@@ -212,6 +228,15 @@ body {
 
 .solid {
   opacity: 1.0;
+}
+
+.countdown {
+  color:rgb(229, 18, 18);
+  font-size:100px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top:20%;
 }
 
 .deleteButton {
