--- a/new_camera/floc_react_app/src/App.css
+++ b/new_camera/floc_react_app/src/App.css
@@ -393,3 +393,100 @@ body {
   transition: background-color 0.3s;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
 }
+
+.popupWrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  opacity: 40%;
+}
+
+.popup {
+  position: absolute;
+  left: 20%;
+  top: 50%;
+  transform: translateX(-50%);
+  transform: translateY(-50%);
+  background-color: #f3f3f3;
+  width: 60%;
+  height: 20%;
+  border: 1px solid rgb(139, 139, 139);
+  border-radius: 3px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+}
+
+.popupMsg {
+  position: relative;
+  text-align: center;
+  top: 12%;
+}
+
+.popupButton {
+  position: relative;
+  left: 7%;
+  top: 20%;
+  width: 35%;
+  height:27%;
+  padding: 5px;
+  font-size: 15px;
+  border: 1px solid #ccc;
+  background-color:white;
+  border-radius: 5px;
+  margin-top: auto;
+  margin-left: 5%;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+.popupButton:hover {
+  background-color:#f7f7f7
+}
+
+.popupButton:active {
+  background-color:#f1f1f1
+}
+
+.acInfoBox {
+  position: absolute;
+  left: 10%;
+  top: 20%;
+  background-color: #f3f3f3;
+  width: 80%;
+  height: 70%;
+  border: 1px solid rgb(139, 139, 139);
+  border-radius: 3px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+}
+
+.acMsg {
+  position: relative;
+  text-align: center;
+  margin: 5px;
+  font-size:17px;
+  width: 80%;
+  left:10%;
+  top: 24%;
+}
+
+.appMsg {
+  position: relative;
+  text-align: center;
+  margin: 5px;
+  font-size:17px;
+  width: 80%;
+  left:10%;
+  top:10%;
+  overflow: auto;
+}
+
+.closeButton {
+  position: absolute;
+  left: 94%;
+  top: 1.5%;
+}
+
+.logo_img {
+  position: absolute;
+  left: 25%;
+  top: 4%;
+}
